fix: add z-index property to private pages

--- a/src/pages/MapPage/MapPage.module.sass
+++ b/src/pages/MapPage/MapPage.module.sass
@@ -1,5 +1,6 @@
 .page
   position: relative
+  z-index: -1
 
 .map
   min-height: calc(100vh - 68px)
